Cohort-Week-28/week-28.1/deployment-env.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ecom-backend-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: ecom-backend
  template:
    metadata:
      labels: 
        app: ecom-backend
    spec: 
      containers: 
      - name: ecom-backend
        image: 100xdevs/env-backend
        ports:
        - containerPort: 3000
        volumeMounts: 
        - name: config-volume
          mountPath: /etc/config
          readOnly: true
      volumes: 
      - name: config-volume
        configMap: 
          name: ecom-backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: ecom-backend-service
spec:
  type: NodePort
  selector: 
    app: ecom-backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
