Cohort-Week-28/week-28.1/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
spec: 
  selector: 
    app: nginx
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007 # This port can be any valid port within the NodePort range
  type: NodePort
