Cohort-Week-28/week-28.1/ingress-full.yml
# nginx Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: nginx
  template: 
    metadata: 
      labels: 
        app: nginx
    spec: 
      containers: 
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
# nginx Service
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
  namespace: default
spec:
  selector: 
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
# apache Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: default
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:  
    metadata:
      labels:
        app: apache
    spec: 
      containers: 
      - name: my-apache-site
        image: httpd:2.4
        ports: 
        - containerPort: 80
---
# apache Service
apiVersion: v1
kind: Service
metadata: 
  name: apache-service
  namespace: default
spec:
  selector: 
    app: apache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: web-apps-ingress
  namespace: default
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service: 
            name: nginx-service
            port: 
              number: 80
      - path: /apache
        pathType: Prefix
        backend: 
          service:
            name: apache-service
            port: 
              number: 80
# kubectl port-forward svc/nginx-ingress-ingress-nginx-controller -n ingress-nginx 8080:80
